--- a/практика 2/RPN (Console App).csproj
+++ b/практика 2/RPN (Console App).csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RPN logic\RPN logic.csproj" />
+    <ProjectReference Include="..\RPN logic\RPN.logic.csproj" />
   </ItemGroup>
 
 </Project>
